deploy/k8s/overlays/production/patch-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notary-api
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: api
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: '1'
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notary-web
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: web
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
